src/components/navPanel/navPanel.scss
@import '../../styles/abstracts/variables';

.nav-panel {
  display: none;
  flex-direction: column;
  position: absolute;
  height: 100vh;
  width: var(--nav-panel-width);
  border-right: 2px solid #eee;
}

.nav-link {
  width: 100%;
  text-transform: uppercase;
  text-decoration: none;
  font-weight: 600;
  color: $black;
  font-size: 1.8rem;
  padding: 1rem 1rem 1rem 2rem;
}

.nav-link:hover {
  background-color: $light-green;
}

.active-nav-link,
.active-nav-link:hover {
  color: $white;
  background-color: $dark-green-full;
}

.logOutBtn {
  display: none;
  position: absolute;
  bottom: 0;
  font-size: 1.4rem;
  padding: 1.2rem 5rem;
}

.overlay-nav {
  position: absolute;
  top: 0;
  min-height: 100vh;
  width: 0%;
  left: 0;
  background-color: $dark-green-full;
  z-index: 10;
  transition: width 0.5s;
}

.overlay-nav--show {
  width: 100%;
}

.overlay-nav__nav-list {
  padding-top: 30%;
  padding-left: 4rem;
  position: absolute;
  top: 0;
  transform: translateX(-100%);
  left: -1000px;
  transition: transform 0.1s;
}

.overlay-nav__nav-list--overlay-transition {
  transform: translateX(0%);
  left: 0;
}

.nav-link-mobile {
  display: block;
  font-size: 3rem;
  margin-bottom: 3rem;
  font-weight: 500;
  letter-spacing: 1rem;
}

.overlay-nav__copyright {
  text-align: center;
  // width: 100%;
  left: -200px;
  width: 0;
  position: absolute;
  bottom: 0;
  padding-bottom: 2rem;
  line-height: 3rem;
}

.overlay-nav__copyright--show {
  width: 100%;
  left: 0;
}

@media (min-width: $breakpoint-tablet) {
  .nav-panel {
    display: flex;
    flex-direction: column;
    position: absolute;
    height: 100vh;
    width: var(--nav-panel-width);
    border-right: 2px solid #eee;
  }

  .logOutBtn {
    display: block;
  }
}

